--- a/app/views/projects/stage2.html.erb
+++ b/app/views/projects/stage2.html.erb
@@ -18,9 +18,6 @@
         {{ messages.message }}
       </div>
 
-      <button class="btn btn-success" onclick="javascript:introJs().start();">
-        <i class="fa fa-map"></i> <%= t('.guide_me') %>
-      </button>
 
       <div role="tabpanel" class="tabpanel">
         <!-- nav tabs -->
@@ -36,6 +33,9 @@
           <div class="project-hero">
             <h2>1. <%= t('.title') %></h2>
             <p><%= t('.description') %></p>
+            <button class="btn btn-warning" onclick="javascript:introJs().start();">
+              <i class="fa fa-map"></i> <%= t('.guide_me') %>
+            </button>
           </div>
           <div role="tabpanel" class="tab-pane active" id="data">
             <div class="panel panel-default">
