--- a/app/views/projects/_dashboard.html.erb
+++ b/app/views/projects/_dashboard.html.erb
@@ -142,8 +142,8 @@
       <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
         <div class="well text-center">
           <h3><%= t('.percentage_interim_outcomes_achieved') %></h3>
-          <div class="c100 p30 big">
-              <span>30%</span>
+          <div class="c100 p<%= @percentage_outcomes_achieved %> big">
+              <span><%= @percentage_outcomes_achieved %>%</span>
               <div class="slice">
                   <div class="bar"></div>
                   <div class="fill"></div>
