--- a/app/views/projects/stage2.html.erb
+++ b/app/views/projects/stage2.html.erb
@@ -22,7 +22,7 @@
       <div role="tabpanel" class="tabpanel">
         <!-- nav tabs -->
         <ul class="nav nav-tabs" role="tablist">
-          <li role="presentation" class="active"><a href="#data" aria-controls="data" role="tab" data-toggle="tab"><%= t('.data_entry') %></a>
+          <li role="presentation" class="active" data-step="1" data-intro="<%= t('.step_one') %>"><a href="#data" aria-controls="data" role="tab" data-toggle="tab"><%= t('.data_entry') %></a>
           </li>
           <li role="presentation"><a href="#explanation" aria-controls="explanation" role="tab" data-toggle="tab"><%= t('.explanation_examples') %></a>
           </li>
@@ -39,7 +39,7 @@
           </div>
           <div role="tabpanel" class="tab-pane active" id="data">
             <div class="panel panel-default">
-              <div class="panel-heading">
+              <div class="panel-heading" data-step="2" data-intro="<%= t('.step_two') %>">
                 <button type="button" class="btn btn-primary pull-right" data-toggle="tooltip" data-placement="left" data-title="<%= t('.subtitle1_tooltip') %>"><i class="fa fa-info"></i></button>
                 <button type="button" class="btn btn-warning pull-right" ng-click="show_goal()">{{ btn_problem }}</button>
                 <h4 class="panel-title"><%= t('.subtitle1') %></h4>
@@ -50,15 +50,15 @@
             </div>
             <%= render "goal_modal" %>
             <div class="panel panel-default">
-                <div class="panel-heading">
+                <div class="panel-heading" data-step="3" data-intro="<%= t('.step_five') %>">
                 <button type="button" class="btn btn-primary pull-right" data-toggle="tooltip" data-placement="left" data-title="<%= t('.subtitle2_tooltip') %>"><i class="fa fa-info"></i></button>
-                <button type="button" class="btn btn-warning pull-right" ng-click="add_edit_objective()"><%= t('.add_objective_button') %></button>
+                <button type="button" class="btn btn-warning pull-right" ng-click="add_edit_objective()"><i class="fa fa-plus-circle"></i> <%= t('.add_objective_button') %></button>
                 <h4 class="panel-title"><%= t('.subtitle2') %></h4>
               </div>
             </div>
             <div class="contenedor">
-              <div class="alert alert-info" role="alert" ng-class="{hidden: unrelated_solutions < 1}">
-                <i class="fa fa-exclamation-triangle"></i> <a href="#" ng-click="list_policy_solutions()"><%= t('.without_objectives_begin_sentence') %> {{unrelated_solutions}} <%= t('.without_objectives_end_sentence') %></a>
+              <div class="alert alert-info" role="alert" ng-class="{hidden: unrelated_solutions < 1}" data-step="4" data-intro="<%= t('.step_three') %>">
+                <i class="fa fa-exclamation-triangle"></i> <a href="#" ng-click="list_policy_solutions()" data-step="5" data-intro="<%= t('.step_four') %>"><%= t('.without_objectives_begin_sentence') %> {{unrelated_solutions}} <%= t('.without_objectives_end_sentence') %></a>
               </div>
 
               <div>
