stage 4 style improvements

--- a/app/views/objectives/stage4.html.erb
+++ b/app/views/objectives/stage4.html.erb
@@ -17,8 +17,6 @@
         <button ng-click="dismiss_modal()" type="button" class="close" aria-label="Close"><span aria-hidden="true">&times;</span></button>
         {{ messages.message }}
       </div>
-      <h2><%= t('.subtitle1') %></h2>
-      <p><%= t('.subtitle1_explanation') %></p>
       <div role="tabpanel" class="tabpanel">
         <!-- nav tabs -->
         <ul class="nav nav-tabs" role="tablist">
@@ -27,11 +25,17 @@
         </ul>
         <!-- tab panes -->
         <div class="tab-content">
+          <div class="project-hero">
+            <h2><%= t('.subtitle1') %></h2>
+            <p><%= t('.subtitle1_explanation') %></p>
+          </div>
           <div role="tabpanel" class="tab-pane active" id="data">
-            <div class="bg_grey">
-              <button type="button" class="btn btn-primary pull-right" data-toggle="tooltip" data-placement="left" title="<%= t('.subtitle1_tooltip') %>"><i class="fa fa-info"></i></button>
-              <button type="button" class="btn btn-warning pull-right" ng-click="add_edit_outcome()"><i class="fa fa-plus-circle"></i> <%= t('.add_button') %></button>
-              <h4><i class="fa fa-circle"></i> <%= t('.subtitle1') %></h4>
+            <div class="panel panel-default">
+              <div class="panel-heading">
+                <button type="button" class="btn btn-primary pull-right" data-toggle="tooltip" data-placement="left" title="<%= t('.subtitle1_tooltip') %>"><i class="fa fa-info"></i></button>
+                <button type="button" class="btn btn-warning pull-right" ng-click="add_edit_outcome()"><i class="fa fa-plus-circle"></i> <%= t('.add_button') %></button>
+                <h4 class="panel-title"><%= t('.subtitle1') %></h4>
+              </div>
             </div>
             <div class="contenedor">
               <table class="table">
@@ -77,7 +81,9 @@
             <%= render "outcome_modal" %>
           </div>
           <div role="tabpanel" class="tab-pane" id="explanation">
-            <%= render "explanation_stage4" %>
+            <div class="box">
+              <%= render "explanation_stage4" %>
+            </div>
           </div>
         </div>
       </div>
