--- a/app/views/objectives/stage3.html.erb
+++ b/app/views/objectives/stage3.html.erb
@@ -28,7 +28,7 @@
         <!-- tab panes -->
         <div class="tab-content">
           <div class="project-hero">
-            <h2>2.1 <%= t('.title') %></h2>
+            <h2><%= t('.title') %></h2>
             <p><%= t('.title_description') %></p>
           </div>
           <div role="tabpanel" class="tab-pane active" id="data">
