--- a/app/views/objectives/stage5.html.erb
+++ b/app/views/objectives/stage5.html.erb
@@ -17,8 +17,7 @@
         <button ng-click="dismiss_modal()" type="button" class="close" aria-label="Close"><span aria-hidden="true">&times;</span></button>
         {{ messages.message }}
       </div>
-      <h2><%= t('.title') %></h2>
-      <p><%= t('.title_description') %></p>
+
       <div role="tabpanel" class="tabpanel">
         <!-- nav tabs -->
         <ul class="nav nav-tabs" role="tablist">
@@ -27,13 +26,19 @@
         </ul>
         <!-- tab panes -->
         <div class="tab-content">
+            <div class="project-hero">
+              <h2><%= t('.title') %></h2>
+              <p><%= t('.title_description') %></p>
+          </div>
           <div role="tabpanel" class="tab-pane active" id="data">
         <!-- actions -->
             <!-- activities -->
-            <div class="bg_grey">
-              <button type="button" class="btn btn-primary pull-right" data-toggle="tooltip" data-placement="left" title="<%= t('.without_activities') %>"><i class="fa fa-info"></i></button>
-              <button type="button" class="btn btn-warning pull-right" ng-click="add_edit_activity()"><i class="fa fa-plus-circle"></i> <%= t('.add_button') %></button>
-              <h4><i class="fa fa-circle"></i> <%= t('.subtitle1') %></h4>
+            <div class="panel panel-default">
+              <div class="panel-heading">
+                <button type="button" class="btn btn-primary pull-right" data-toggle="tooltip" data-placement="left" title="<%= t('.without_activities') %>"><i class="fa fa-info"></i></button>
+                <button type="button" class="btn btn-warning pull-right" ng-click="add_edit_activity()"><i class="fa fa-plus-circle"></i> <%= t('.add_button') %></button>
+                <h4 class="panel-title"><%= t('.subtitle1') %></h4>
+              </div>
             </div>
             <div class="contenedor">
               <table class="table">
@@ -74,15 +79,19 @@
               <%= render 'modal_indicator' %>
             </div>
             <!-- end of actions -->
-          <div class="bg_grey">
-            <button type="button" class="btn btn-primary pull-right" data-toggle="tooltip" data-placement="left" title="<%= t('.subtitle2_explanation') %>"><i class="fa fa-info"></i></button>
-            <a href="https://trello.com/" target="_self" class="btn btn-warning pull-right"><i class="fa fa-calendar"></i> <%= t('.trello') %></a>
-            <h4><i class="fa fa-circle"></i>  <%= t('.subtitle2') %></h4>
-          </div>
+            <div class="panel panel-default">
+              <div class="panel-heading">
+                <button type="button" class="btn btn-primary pull-right" data-toggle="tooltip" data-placement="left" title="<%= t('.subtitle2_explanation') %>"><i class="fa fa-info"></i></button>
+                <a href="https://trello.com/" target="_self" class="btn btn-warning pull-right"><i class="fa fa-calendar"></i> <%= t('.trello') %></a>
+                <h4 class="panel-title"><%= t('.subtitle2') %></h4>
+              </div>
+            </div>
           </div>
           <!-- end of actions -->
           <div role="tabpanel" class="tab-pane" id="explanation">
-          <%= render 'explanation_stage5' %>
+            <div class="box">
+              <%= render 'explanation_stage5' %>
+            </div>
           </div>
           <div role="tabpanel" class="tab-pane" id="tips">
             tips
