--- a/app/views/projects/stage1.html.erb
+++ b/app/views/projects/stage1.html.erb
@@ -26,7 +26,7 @@
         <!-- tab panes -->
         <div class="tab-content">
             <div class="project-hero">
-              <h2>1.1 <%= t('.title') %></h2>
+              <h2><%= t('.title') %></h2>
               <p><%= t('.description') %></p>
               <button class="btn btn-warning" onclick="javascript:introJs().start();">
                 <i class="fa fa-map"></i> <%= t('.guide_me') %>
