--- a/app/views/projects/stage2.html.erb
+++ b/app/views/projects/stage2.html.erb
@@ -31,7 +31,7 @@
         <!-- tab panes -->
         <div class="tab-content">
           <div class="project-hero">
-            <h2>1.2 <%= t('.title') %></h2>
+            <h2><%= t('.title') %></h2>
             <p><%= t('.description') %></p>
             <button class="btn btn-warning" onclick="javascript:introJs().start();">
               <i class="fa fa-map"></i> <%= t('.guide_me') %>
