--- a/app/views/objectives/stage5.html.erb
+++ b/app/views/objectives/stage5.html.erb
@@ -70,6 +70,7 @@
                     <td class="text-right">
                       <i class="fa fa-pencil-square-o" ng-click="add_edit_activity(activity)" title="Edit"></i>
                       <i class="fa fa-line-chart" ng-click="add_edit_indicator(activity)" title="Indicators"></i>
+                      <a href="" id="activity_{{activity.id}}"></a><i class="fa fa-calendar" ng-if="activity.scheduling" ng-click="get_ical(activity)" title="iCal"></i>
                       <i class="fa fa-trash" ng-click="delete_activity(activity)" title="Delete"></i>
                     </td>
                   </tr>
