fix button calendar style

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -28,7 +28,7 @@ input, button, select, textarea {
 select {
   padding: 5px;
 }
-table .fa-pencil-square-o, table .fa-trash, table .fa-line-chart {
+table .fa-pencil-square-o, table .fa-trash, table .fa-line-chart, table .fa-calendar {
   color: #0091EA;
   cursor: pointer;
 }
