--- a/app/views/objectives/stage3.html.erb
+++ b/app/views/objectives/stage3.html.erb
@@ -30,17 +30,20 @@
           <div class="project-hero">
             <h2><%= t('.title') %></h2>
             <p><%= t('.title_description') %></p>
+            <button class="btn btn-warning" onclick="javascript:introJs().start();">
+              <i class="fa fa-map"></i> <%= t('.guide_me') %>
+            </button>
           </div>
           <div role="tabpanel" class="tab-pane active" id="data">
             <div class="panel panel-default">
-              <div class="panel-heading">
+              <div class="panel-heading"  data-step="1" data-intro="<%= t('.step_one') %>">
                 <button type="button" class="btn btn-primary pull-right" data-toggle="tooltip" data-placement="left" data-title="<%= t('.subtitle1_explanation') %>"><i class="fa fa-info"></i></button>
                 <a href="//www.draw.io/" target="_blank" class="btn btn-warning pull-right"><i class="fa fa-sitemap"></i> <%= t('.draw_sandbox_button') %></a>
                 <h4 class="panel-title"><%= t('.subtitle1') %></h4>
               </div>
             </div>
             <div class="panel panel-default">
-              <div class="panel-heading">
+              <div class="panel-heading" data-step="2" data-intro="<%= t('.step_two') %>">
                 <button type="button" class="btn btn-primary pull-right" data-toggle="tooltip" data-placement="left" data-title="<%= t('.subtitle2_explanation') %>"><i class="fa fa-info"></i></button>
                 <button type="button" class="btn btn-warning pull-right" ng-click="add_edit_actor()"><i class="fa fa-user"></i> <%= t('.add_actor_button') %></button>
                 <h4 id="actors" class="panel-title"><%= t('.subtitle2') %></h4>
@@ -67,7 +70,7 @@
                 </table>
             </div>
             <div class="panel panel-default">
-              <div class="panel-heading"  id="factors-barriers">
+              <div class="panel-heading"  id="factors-barriers"  data-step="3" data-intro="<%= t('.step_three') %>">
               <button type="button" class="btn btn-primary pull-right" data-toggle="tooltip" data-placement="left" title="<%= t('.subtitle3_tooltip') %>"><i class="fa fa-info"></i></button>
               <button type="button" class="btn btn-warning pull-right" ng-click="add_edit_enabling_factor()"><i class="fa fa-plus-circle"></i> <%= t('.add_enabling_factor_button') %></button>
               <button type="button" class="btn btn-warning pull-right" ng-click="add_edit_barrier()"><i class="fa fa-plus-circle"></i> <%= t('.add_barrier_button') %></button>
