--- a/app/views/objectives/stage4.html.erb
+++ b/app/views/objectives/stage4.html.erb
@@ -28,10 +28,13 @@
           <div class="project-hero">
             <h2><%= t('.subtitle1') %></h2>
             <p><%= t('.subtitle1_explanation') %></p>
+            <button class="btn btn-warning" onclick="javascript:introJs().start();">
+              <i class="fa fa-map"></i> <%= t('.guide_me') %>
+            </button>
           </div>
           <div role="tabpanel" class="tab-pane active" id="data">
             <div class="panel panel-default">
-              <div class="panel-heading">
+              <div class="panel-heading"  data-step="1" data-intro="<%= t('.step_one') %>">
                 <button type="button" class="btn btn-primary pull-right" data-toggle="tooltip" data-placement="left" title="<%= t('.subtitle1_tooltip') %>"><i class="fa fa-info"></i></button>
                 <button type="button" class="btn btn-warning pull-right" ng-click="add_edit_outcome()"><i class="fa fa-plus-circle"></i> <%= t('.add_button') %></button>
                 <h4 class="panel-title"><%= t('.subtitle1') %></h4>
@@ -44,7 +47,7 @@
                     <th><%= t('.interim_outcome') %></th>
                     <th><%= t('.interim_outcome_type') %></th>
                     <!-- <th><%= t('.actor_type') %></th> -->
-                    <th><%= t('.activities_number') %></th>
+                    <th data-step="2" data-intro="<%= t('.step_two') %>"><%= t('.activities_number') %></th>
                     <th class="text-right"><%= t('.actions') %></th>
                   </tr>
                 </thead>
