--- a/app/views/objectives/stage5.html.erb
+++ b/app/views/objectives/stage5.html.erb
@@ -62,12 +62,12 @@
                         <li>{{ o }}</li>
                       </ul>
                     </td>
-                    <td>{{activity.scheduling | date: 'mediumDate' }}</td>
+                    <td nowrap>{{activity.scheduling | date: 'mediumDate' }}</td>
                     <td class="text-center">{{ activity.percentage }}%</td>
                     <td class="text-center">
                       <i class="fa fa-check" ng-if="activity.completion"></i>
                     </td>
-                    <td class="text-right">
+                    <td class="text-right" nowrap>
                       <i class="fa fa-pencil-square-o" ng-click="add_edit_activity(activity)" title="Edit"></i>
                       <i class="fa fa-line-chart" ng-click="add_edit_indicator(activity)" title="Indicators"></i>
                       <a href="" id="activity_{{activity.id}}"></a><i class="fa fa-calendar" ng-if="activity.scheduling" ng-click="get_ical(activity)" title="iCal"></i>
