Traducción explicación etapa 2
etapa 2

--- a/app/views/projects/stage1.html.erb
+++ b/app/views/projects/stage1.html.erb
@@ -48,7 +48,7 @@
               <span ng-if="problem.title != '.'">
                 <p class="bold"><%= t('.problem') %></p>
                 <p>{{ problem.title }}</p>
-                <p class="bold"><%= t('.description') %></p>
+                <p class="bold"><%= t('.problem_description') %></p>
                 <p>{{ problem.description }}</p>
                 <!-- <p class="bold"><%= t('.focus_area') %></p>
                 <p>{{ problem.focus_area }}</p> -->
