--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,7 +35,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="<%= root_path %>" target="_self">Wizard <span>Beta</span></a>
+          <a class="navbar-brand" href="<%= root_path %>" target="_self">Estratega <span>Beta</span></a>
         </div>
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse navbar-ex1-collapse">
@@ -75,7 +75,7 @@
       <div class="container">
         <div class="row">
           <div class="col-xs-6 col-sm-6 col-md-8 col-lg-4">
-            <p class="brand" href="#">Wizard <span>Beta</span></p>
+            <p class="brand" href="#">Estratega <span>Beta</span></p>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec .</p>
               </div>
           <div class="col-xs-6 col-sm-6 col-md-4 col-lg-4 col-md-offset-4 col-lg-offset-4">
