Cambio de color menú

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -144,8 +144,8 @@ table a {
   margin-bottom: 0px;
 }
 .navbar-default, .menu {
-  background-color: #0091EA;
-  border-color: #0091EA;
+  background-color: #021b2d;
+  border-color: #021b2d;
   border-radius: 0px;
 }
 
