Cambio color botones naranjos

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -428,8 +428,8 @@ div#resources_paginate {
 }
 .benefits .btn-danger, .banner .btn-danger {
     border-radius: 15px;
-    background-color: #FF635A;
-    border-color: #FF4F4A;
+    background-color: #eb0f4a;
+    border-color: #eb0f4a;
     color: #ffffff;
     text-transform: none;
 }
