change footer color

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -208,7 +208,7 @@ table a {
   margin-bottom: 30px;
 }
 footer {
-  background-color: #00385A;
+  background-color: #021b2d;
   color: #ffffff;
   padding: 40px 0;
   font-size: 12px;
