--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -420,8 +420,9 @@ div#resources_paginate {
   left: auto;
 }
 .benefits{
-  margin: 50px 0;
+  padding: 50px 0;
   text-align: center;
+  background-color: #63c0d6;
 }
 .benefits p {
   color: #436B83;
