Cambio color texto beneficios

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -425,7 +425,10 @@ div#resources_paginate {
   background-color: #63c0d6;
 }
 .benefits p {
-  color: #436B83;
+  color: #ffffff;
+}
+.benefits h2 {
+  color: #ffffff;
 }
 .benefits .btn-danger, .banner .btn-danger {
     border-radius: 15px;
