Cambio cool botón .default

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -439,8 +439,8 @@ div#resources_paginate {
 }
 .benefits .btn-default {
     border-radius: 15px;
-    background-color: #CDCDCD;
-    border-color: #CDCDCD;
+    background-color: #023355;
+    border-color: #023355;
     color: #ffffff;
     text-transform: none;
 }
