sacar imagen cover de banner

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -467,7 +467,7 @@ div#resources_paginate {
   width: 100%;
 }
 .banner {
-  background: image-url("banner.jpg") no-repeat center center;
+  background: image-url("x.jpg") no-repeat center center;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
