--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -63,6 +63,14 @@
 <div class="testimonial">
   <div class="container">
     <div class="row">
+      <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
+        
+      </div>
+      <div class="col-xs-9 col-sm-9 col-md-9 col-lg-9">
+        
+      </div>
+    </div>
+    <div class="row">
       <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
         <table>
           <tr>
