Testimonio nuevo formato 1 y 2

--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -64,10 +64,20 @@
   <div class="container">
     <div class="row">
       <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
-        
+        <%= image_tag "t1.png" %>
       </div>
       <div class="col-xs-9 col-sm-9 col-md-9 col-lg-9">
-        
+        <p class="cita">“<%= t('.testimony1_txt') %>”</p>
+        <p><%= t('.testimony1_signer') %></p>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
+        <%= image_tag "t1.png" %>
+      </div>
+      <div class="col-xs-9 col-sm-9 col-md-9 col-lg-9">
+        <p class="cita">“<%= t('.testimony1_txt') %>”</p>
+        <p><%= t('.testimony1_signer') %></p>
       </div>
     </div>
     <div class="row">
@@ -75,11 +85,11 @@
         <table>
           <tr>
             <td>
-              <%= image_tag "t1.png" %>
+              <%= image_tag "t2.png" %>
             </td>
             <td class="text-right">
-              <p class="cita">“<%= t('.testimony1_txt') %>”</p>
-              <p><%= t('.testimony1_signer') %></p>
+              <p class="cita">“<%= t('.testimony2_txt') %>”</p>
+              <p><%= t('.testimony2_signer') %></p>
             </td>
           </tr>
         </table>
