--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -479,14 +479,14 @@ div#resources_paginate {
   width: 100%;
 }
 .banner {
-  background: image-url("x.jpg") no-repeat center center;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
+  background: image-url("welcome.png");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-position-y: 290px;
   padding: 50px 0;
-  margin: -15px 0;
+  margin: -5px 0;
   background-color: #021b2d;
+  height: 510px;
 }
 
 .banner .container {
