cambio color botón naranjo

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -40,12 +40,12 @@ table .fa-pencil-square-o, table .fa-trash, table .fa-line-chart, table .fa-cale
   font-weight: 300;
 }
 .btn-warning {
-  background-color: #ff635a;
-  border-color: #ff4f4a;
+  background-color: #eb0f4a;
+  border-color: #eb0f4a;
 }
 .btn-warning:hover, .btn-warning:focus, .btn-warning:active, .btn-warning.active, .open .dropdown-toggle.btn-warning {
-  background-color: #ff4f4a;
-  border-color: #ff635a;
+  background-color: #eb0f4a;
+  border-color: #eb0f4a;
 }
 
 .btn-info {
