cambio celestes heros

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -577,7 +577,7 @@ table.indicator td:first-child {
 .project-hero {
     margin: -1px -0px 30px -0px;
     padding: 20px;
-    background: #00C2E4 url(/assets/project-hero01.png) no-repeat bottom right;
+    background: #63c0d6 url(/assets/project-hero01.png) no-repeat bottom right;
     color: #fff;
     min-height: 210px;
     border-radius: 0px 6px 0px 0px;
@@ -599,7 +599,7 @@ table.indicator td:first-child {
 }
 @media all and (max-width: 992px) {
   .project-hero, .project-hero02 {
-    background: #00c2e4;
+    background: #63c0d6;
   }
 }
 .project-hero h2, .project-hero02 h2 {
@@ -609,7 +609,7 @@ table.indicator td:first-child {
 .project-hero2 {
     margin: -1px -0px 0px -0px;
     padding: 20px;
-    background-color: #00C2E4;
+    background-color: #63c0d6;
     color: #fff;
     min-height: 210px;
     border-radius: 0px 6px 0px 0px;
@@ -626,9 +626,9 @@ table.indicator td:first-child {
 }
 
 .nav-tabs > li.active > a, .nav-tabs > li.active > a:hover, .nav-tabs > li.active > a:focus {
-  border: 1px solid #00C2E4;
+  border: 1px solid #63c0d6;
   color: #ffffff;
-  background-color: #00C2E4;
+  background-color: #63c0d6;
 }
 
 .tab-content > .active {
