--- a/app/views/layouts/_signin.html.erb
+++ b/app/views/layouts/_signin.html.erb
@@ -13,5 +13,5 @@
     </label>
   </div>
   <%= f.submit 'Sign in', class: "btn btn-success" %>
-  <p><%= link_to "Forgot your password?", new_password_path(:user) %></p>
+  <p><%= link_to "¿Olvidó su contraseña?", new_password_path(:user) %></p>
 <% end %>
