--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -54,7 +54,7 @@
                 </li>
                 <li class="divider"></li>
                 <li>
-                  <%= link_to "Salir", destroy_user_session_path, :method => :delete %>
+                  <%= link_to "Cerrar sesión", destroy_user_session_path, :method => :delete %>
                 </li>
               </ul>
             </li>
@@ -81,7 +81,7 @@
           <div class="col-xs-6 col-sm-6 col-md-4 col-lg-4 col-md-offset-4 col-lg-offset-4">
             <h5>Contact</h5>
             <p><i class="fa fa-phone-square"></i> +56 2 2419 2770</p>
-            <p><i class="fa fa-envelope"></i> <a href="">Press Contact</a></p>
+            <p><i class="fa fa-envelope"></i> <a href="">Contacto de Prensa</a></p>
             <p>&nbsp;<i class="fa fa-map-marker"></i>&nbsp; Holanda 895, Providencia</p>
           </div>
         </div>
