corrección color tabs

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -626,9 +626,9 @@ table.indicator td:first-child {
 }
 
 .nav-tabs > li.active > a, .nav-tabs > li.active > a:hover, .nav-tabs > li.active > a:focus {
-  border: 1px solid #63c0d6;
+  border: 1px solid #00c2e4;
   color: #ffffff;
-  background-color: #63c0d6;
+  background-color: #00c2e4;
 }
 
 .tab-content > .active {
