traducciones a títulos de stages

--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -28,7 +28,7 @@
               <i class="fa fa-map"></i> <%= t('.guide_me') %>
             </button>
           </div>
-          <h3 class="mb50">Stage 1: Identify the policy objectives to pursue</h3>
+          <h3 class="mb50">Etapa 1: Identificar el problema y los objetivos políticos a lograr</h3>
           <div class="panel panel-default" data-step="2" data-intro="<%= t('.step_two') %>">
             <div class="panel-heading">
               <h4 class="panel-title" title="Complete Stage"><i class="<%= icon_class_stage 1 %>"></i> <%= t('.stage1_title') %></h4>
@@ -91,7 +91,7 @@
         </div>
       </div>
       <hr>
-      <h3 class="mb50">Stage 2: Plan for each of your prioritized Policy Objetives in detail</h3>
+      <h3 class="mb50">Etapa 2 : El Plan para cada uno de sus Objetivos de política priorizados en detalle</h3>
       <div class="panel panel-default">
         <div class="panel-heading">
           <h4 class="panel-title"><i class="<%= icon_class_stage 3 %>"></i> <%= t('.stage3_title') %></h4>
